# paper-manager

./: .gitignore  PANEL_LAYOUT.md  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
.github/workflows/: release.yml
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/search/: constants.ts  page.tsx
app/table/: page.tsx
app/writing/: page.tsx
components/batch/: BatchActionsBar.tsx
docs/: index.html  privacy-en.html  privacy.html
e2e/: dashboard.spec.ts  search.spec.ts  settings.spec.ts  table.spec.ts
hooks/: useContainerWidth.ts  useFolders.ts  useHighlights.ts  usePapers.ts  useSettings.ts  useTopics.ts  useWritingDocuments.ts  useWritingProjects.ts
lib/ai/: types.ts  (+3 more)
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: ai_analysis.rs  automation.rs  citations.rs  folders.rs  google_auth.rs  google_drive.rs  highlights.rs  mod.rs  paper_search.rs  papers.rs  pdf.rs  pdf_indexing.rs  settings.rs  topics.rs  writing.rs
src-tauri/src/commands/paper_search/: arxiv.rs  crossref.rs  google_scholar.rs  kci.rs  mod.rs  pubmed.rs  semantic_scholar.rs
src-tauri/src/db/: connection.rs  folders.rs  highlights.rs  migrations.rs  mod.rs  papers.rs  pdf_content.rs  settings.rs  topics.rs  writing.rs
src-tauri/src/models/: folder.rs  highlight.rs  mod.rs  paper.rs  paper_search.rs  pdf_content.rs  topic.rs  writing.rs
store/: useAppStore.ts  useWritingStore.ts
test-results/: .last-run.json
(+50 files in other folders)
